--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{B341E60E-BA10-35EF-6E38-0AC0F4AED7F5}</ProjectGuid>
+	<ProjectGuid>{8E9692F6-E4D3-3EF6-3DDD-64CE622173F3}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -73,7 +73,7 @@
      <None Include="Assets\VisualizerStudio\Editor\VisualizerStudioEditor.xml" />
      <None Include="Assets\VisualizerStudio\Scripts\VisualizerStudio.xml" />
  <Reference Include="Assembly-UnityScript">
- <HintPath>C:/Users/Ed/Downloads/JQ Prototype Final/JQ Prototype Final/Library/ScriptAssemblies/Assembly-UnityScript.dll</HintPath>
+ <HintPath>C:/Users/Ed/Desktop/Workshop/Jam Quest/JQVerticalSlice/Library/ScriptAssemblies/Assembly-UnityScript.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
@@ -81,19 +81,19 @@
  <Reference Include="UnityEditor.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/Editor/UnityEditor.UI.dll</HintPath>
  </Reference>
- <Reference Include="UnityEditor.Graphs">
- <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
- </Reference>
  <Reference Include="VisualizerStudioEditor">
- <HintPath>C:/Users/Ed/Downloads/JQ Prototype Final/JQ Prototype Final/Assets/VisualizerStudio/Editor/VisualizerStudioEditor.dll</HintPath>
+ <HintPath>C:/Users/Ed/Desktop/Workshop/Jam Quest/JQVerticalSlice/Assets/VisualizerStudio/Editor/VisualizerStudioEditor.dll</HintPath>
  </Reference>
  <Reference Include="VisualizerStudio">
- <HintPath>C:/Users/Ed/Downloads/JQ Prototype Final/JQ Prototype Final/Assets/VisualizerStudio/Scripts/VisualizerStudio.dll</HintPath>
+ <HintPath>C:/Users/Ed/Desktop/Workshop/Jam Quest/JQVerticalSlice/Assets/VisualizerStudio/Scripts/VisualizerStudio.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.Graphs">
+ <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-vs.csproj">
-      <Project>{4CDCDA8A-678D-3146-FBFB-5AB08E95F005}</Project>      <Name>Assembly-CSharp-vs</Name>    </ProjectReference>
+      <Project>{8DF73BA9-52F8-69FA-5237-D8E4FD73ED57}</Project>      <Name>Assembly-CSharp-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
