--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Art Assets\World Object\Scripts\Disable_Building_Trigger.cs" />
      <Compile Include="Assets\Art Assets\World Object\Scripts\Disable_Building_Trigger2.cs" />
+     <Compile Include="Assets\BrettAdditions\BounceActivator.cs" />
      <Compile Include="Assets\BrettAdditions\ConstantBGScroll.cs" />
      <Compile Include="Assets\BrettAdditions\PlayerAttack_VisUpdated.cs" />
      <Compile Include="Assets\BrettAdditions\PlayerBGScroll.cs" />
